# kops

./: Gopkg.toml  Makefile  WORKSPACE
cmd/kops/: BUILD.bazel  create_cluster.go  integration_test.go  toolbox.go  toolbox_inventory.go  toolbox_inventory_test.go  toolbox_stage_inventory.go  update_cluster.go
hack/: .packages  .spelling_failures  make-apimachinery.sh  verify-spelling.sh
pkg/apis/kops/: channel.go  cluster.go  instancegroup.go  zz_generated.deepcopy.go
pkg/apis/kops/v1alpha1/: cluster.go  doc.go  zz_generated.conversion.go  zz_generated.deepcopy.go
pkg/apis/kops/v1alpha2/: cluster.go  zz_generated.conversion.go  zz_generated.deepcopy.go
pkg/apis/kops/validation/: gce.go  legacy.go
pkg/apiserver/cmd/server/: start.go
pkg/kubeconfig/: create_kubecfg.go
pkg/model/: BUILD.bazel  bastion.go  context.go  convenience.go  external_access.go  firewall.go  master_volumes.go  sshkey.go
pkg/model/awsmodel/: api_loadbalancer.go  autoscalinggroup.go  convenience.go
pkg/model/components/: BUILD.bazel  context.go  kubecontrollermanager.go
pkg/model/gcemodel/: BUILD.bazel  autoscalinggroup.go  context.go
pkg/model/gkemodel/: BUILD.bazel  gke_cluster.go  node_pool.go
pkg/openapi/: openapi_generated.go
pkg/resources/gce/: BUILD.bazel  dump.go  gce.go
pkg/resources/gke/: BUILD.bazel  gke.go
pkg/resources/ops/: BUILD.bazel  collector.go
protokube/pkg/gossip/mesh/: BUILD.bazel
protokube/pkg/protokube/: BUILD.bazel  gce_volume.go
tests/integration/update_cluster/shared_security_groups/: in-v1alpha2.yaml  kubernetes.tf
upup/models/cloudup/resources/addons/networking.projectcalico.org/: k8s-1.6.yaml.template  pre-k8s-1.6.yaml.template
upup/pkg/fi/: BUILD.bazel
upup/pkg/fi/cloudup/: BUILD.bazel  apply_cluster.go  bootstrapchannelbuilder.go  inventory.go  populate_cluster_spec.go  stage_inventory.go  tagbuilder.go  utils.go
upup/pkg/fi/cloudup/awstasks/: securitygroup.go  securitygrouprule.go
upup/pkg/fi/cloudup/gce/: BUILD.bazel  gce_cloud.go  instancegroups.go  status.go  wrappers.go
upup/pkg/fi/cloudup/gcetasks/: BUILD.bazel  address.go  convenience.go  disk.go  firewallrule.go  forwardingrule.go  instance.go  instancegroupmanager.go  instancetemplate.go  network.go  storagebucketacl.go  storagebucketiam.go  storageobjectacl.go  subnet.go  targetpool.go
upup/pkg/fi/cloudup/gcp/: BUILD.bazel  gcp_url.go  op.go  op_test.go  utils.go
upup/pkg/fi/cloudup/gke/: BUILD.bazel  gke_apitarget.go  gke_apitarget_test.go  gke_cloud.go  instancegroups.go
upup/pkg/fi/cloudup/gketasks/: BUILD.bazel  gke_cluster.go  gke_cluster_test.go  gkecluster_fitask.go  node_pool.go  nodepool_fitask.go  nodepool_test.go  storagebucketacl.go  storagebucketacl_fitask.go  storagebucketiam.go  storagebucketiam_fitask.go  storageobjectacl.go  storageobjectacl_fitask.go
