load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "gke_cluster.go",
        "node_pool.go",
    ],
    importpath = "k8s.io/kops/pkg/model/gkemodel",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/model:go_default_library",
        "//pkg/model/defaults:go_default_library",
        "//upup/pkg/fi:go_default_library",
        "//upup/pkg/fi/cloudup/gketasks:go_default_library",
    ],
)
