load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["gke.go"],
    importpath = "k8s.io/kops/pkg/resources/gke",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/resources:go_default_library",
        "//upup/pkg/fi:go_default_library",
        "//upup/pkg/fi/cloudup/gke:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/google.golang.org/api/container/v1:go_default_library",
    ],
)
